@@ -4,10 +4,13 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import bio.terra.common.category.Unit;
+import bio.terra.common.exception.ApiException;
+import bio.terra.common.exception.ErrorReportException;
+import bio.terra.common.exception.ServiceUnavailableException;
+import bio.terra.service.auth.iam.exception.IamUnauthorizedException;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.concurrent.Callable;
 import java.util.concurrent.Future;
 import java.util.concurrent.LinkedBlockingQueue;
@@ -19,43 +22,36 @@ import java.util.stream.IntStream;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.IterableUtils;
 import org.awaitility.Awaitility;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
 
-@RunWith(SpringRunner.class)
-@SpringBootTest(properties = {"datarepo.testWithEmbeddedDatabase=false"})
-@AutoConfigureMockMvc
 @ActiveProfiles({"google", "unittest"})
-@Category(Unit.class)
-public class FutureUtilsTest {
-  private static Logger logger = LoggerFactory.getLogger(FutureUtilsTest.class);
+@Tag(Unit.TAG)
+class FutureUtilsTest {
+  private static final Logger logger = LoggerFactory.getLogger(FutureUtilsTest.class);
 
   private ThreadPoolExecutor executorService;
 
-  @Before
-  public void setUp() throws Exception {
+  @BeforeEach
+  void beforeEach() {
     executorService =
         new ThreadPoolExecutor(3, 3, 0, TimeUnit.MILLISECONDS, new LinkedBlockingQueue<>(10));
   }
 
-  @After
-  public void afterClass() throws Exception {
+  @AfterEach
+  void afterEach() {
     if (executorService != null) {
       executorService.shutdownNow();
     }
   }
 
   @Test
-  public void testWaitForTasks() {
+  void testWaitForTasks() {
     final AtomicInteger counter = new AtomicInteger(0);
     final Callable<Integer> action =
         () -> {
@@ -73,7 +69,7 @@ public class FutureUtilsTest {
     }
 
     final List<Integer> resolved = FutureUtils.waitFor(futures);
-    assertThat(resolved).containsAll(IntStream.range(0, 10).boxed().collect(Collectors.toList()));
+    assertThat(resolved).containsAll(IntStream.range(0, 10).boxed().toList());
     // Note: adding a sleep since getActiveCount represents an approximation of the number of
     // threads active.
     Awaitility.await()
@@ -82,11 +78,10 @@ public class FutureUtilsTest {
   }
 
   @Test
-  public void testWaitForTaskAcrossTwoBatches() throws InterruptedException {
+  void testWaitForTaskAcrossTwoBatches() {
     // Tests two batches of actions being submitted.  The second batch should be shorter (note the
-    // sleep).  Ensure
-    // that it properly finishes before the first batch and that an exception doesn't cause the
-    // first batch to fail
+    // sleep).  Ensure that it properly finishes before the first batch and that an exception
+    // doesn't cause the first batch to fail
 
     // Expand the thread queue for this particular test
     if (executorService != null) {
@@ -139,19 +134,20 @@ public class FutureUtilsTest {
     assertThat(CollectionUtils.collect(batch1Futures, Future::isDone)).doesNotContain(true);
 
     final List<Integer> resolved1 = FutureUtils.waitFor(batch1Futures);
-    assertThat(resolved1).containsAll(IntStream.range(0, 3).boxed().collect(Collectors.toList()));
+    assertThat(resolved1).containsAll(IntStream.range(0, 3).boxed().toList());
     assertThat(executorService.getActiveCount()).isZero();
   }
 
   @Test
-  public void testWaitForTasksSomeFail() throws InterruptedException {
+  void testWaitForTasksSomeFail() {
     final AtomicInteger counter = new AtomicInteger(0);
+    final RuntimeException rootCause = new RuntimeException("Injected error");
     final Callable<Integer> action =
         () -> {
           try {
             final int count = counter.getAndIncrement();
             if (count == 5) {
-              throw new RuntimeException("Injected error");
+              throw rootCause;
             }
             TimeUnit.SECONDS.sleep(1);
             return count;
@@ -165,7 +161,10 @@ public class FutureUtilsTest {
       futures.add(executorService.submit(action));
     }
 
-    assertThatThrownBy(() -> FutureUtils.waitFor(futures)).hasMessage("Error executing thread");
+    assertThatThrownBy(() -> FutureUtils.waitFor(futures))
+        .isInstanceOf(ApiException.class)
+        .hasMessage("Error executing thread")
+        .hasRootCause(rootCause);
     // Note: adding a sleep since getActiveCount represents an approximation of the number of
     // threads active.
     Awaitility.await()
@@ -177,7 +176,42 @@ public class FutureUtilsTest {
   }
 
   @Test
-  public void testThreadTimeoutFailure() throws InterruptedException {
+  void testWaitForTasksSomeThrowErrorReportException() {
+    final AtomicInteger counter = new AtomicInteger(0);
+    final ErrorReportException rootCause = new IamUnauthorizedException("Unauthorized");
+    final Callable<Integer> action =
+        () -> {
+          try {
+            final int count = counter.getAndIncrement();
+            if (count == 5) {
+              throw rootCause;
+            }
+            TimeUnit.SECONDS.sleep(1);
+            return count;
+          } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+          }
+        };
+
+    final List<Future<Integer>> futures = new ArrayList<>();
+    for (int i = 0; i < 10; i++) {
+      futures.add(executorService.submit(action));
+    }
+
+    // We do not wrap an ErrorReportException cause to preserve its HTTP status.
+    assertThatThrownBy(() -> FutureUtils.waitFor(futures)).isEqualTo(rootCause);
+    // Note: adding a sleep since getActiveCount represents an approximation of the number of
+    // threads active.
+    Awaitility.await()
+        .atMost(5, TimeUnit.SECONDS)
+        .untilAsserted(() -> assertThat(executorService.getActiveCount()).isZero());
+
+    // Make sure that some tasks after the failure were cancelled
+    assertThat(IterableUtils.countMatches(futures, Future::isCancelled)).isPositive();
+  }
+
+  @Test
+  void testThreadTimeoutFailure() {
     final AtomicInteger counter = new AtomicInteger(0);
     // Note: Logging statements left in to make understanding test runs easier
     final Callable<Integer> action =
@@ -204,7 +238,8 @@ public class FutureUtilsTest {
       futures.add(executorService.submit(action));
     }
 
-    assertThatThrownBy(() -> FutureUtils.waitFor(futures, Optional.of(Duration.ofMillis(100))))
+    assertThatThrownBy(() -> FutureUtils.waitFor(futures, Duration.ofMillis(100)))
+        .isInstanceOf(ServiceUnavailableException.class)
         .hasMessage("Thread timed out");
     // Note: adding a sleep since getActiveCount represents an approximation of the number of
     // threads active.
@@ -214,7 +249,7 @@ public class FutureUtilsTest {
   }
 
   @Test
-  public void testMaxOutQueue() {
+  void testMaxOutQueue() {
     final AtomicInteger counter = new AtomicInteger(0);
     final Callable<Integer> action =
         () -> {
@@ -245,8 +280,7 @@ public class FutureUtilsTest {
     }
 
     final List<Integer> resolvedSecondRound = FutureUtils.waitFor(futures);
-    assertThat(resolvedSecondRound)
-        .containsAll(IntStream.range(13, 23).boxed().collect(Collectors.toList()));
+    assertThat(resolvedSecondRound).containsAll(IntStream.range(13, 23).boxed().toList());
 
     // Note: adding a sleep since getActiveCount represents an approximation of the number of
     // threads active.
